# detray

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yaml  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  README.md  _config.yml  index.md  platform  run_tests  test.cpp  test_platform.cpp  test_test  trained-steppsq
core/: CMakeLists.txt
core/cmake/: version.hpp.in
core/include/core/: array_defs.hpp  cylinder3.hpp  detector.hpp  geometry.hpp  index_geometry.hpp  intersection.hpp  mask_store.hpp  portal.hpp  proto_detector.hpp  read_csv.hpp  rectangle2.hpp  ring2.hpp  simple_geometry.hpp  surface.hpp  surface_base.hpp  test_plugin.inl  track.hpp  transform_store.hpp  trapezoid2.hpp  volume.hpp  volume_connector.hpp
core/include/definitions/: basic_types.hpp  cuda_defs.hpp  detray_get.hpp  invalid_values.hpp
core/include/geometry/: cylindrical_detector.hpp  detector.hpp  index_geometry.hpp  simple_geometry.hpp  surface_base.hpp  unified_index_geometry.hpp  volume.hpp  volume_connector.hpp
core/include/grids/: associator.hpp  axis.hpp  grid2.hpp  populator.hpp  serializer2.hpp
core/include/masks/: annulus.hpp  annulus2.hpp  cylinder2.hpp  cylinder3.hpp  mask_identifier.hpp  masks.hpp  rectangle2.hpp  ring2.hpp  single3.hpp  trapezoid2.hpp  unmasked.hpp
core/include/tools/: bin_association.hpp  concentric_cylinder_intersector.hpp  cylinder_intersector.hpp  geometry_graph.hpp  intersection_kernel.hpp  line_stepper.hpp  local_object_finder.hpp  navigator.hpp  planar_intersector.hpp  propagator.hpp  simple_navigator.hpp  single_state_navigator.hpp  single_type_navigator.hpp
core/include/utils/: c_step.hpp  containers.hpp  enumerate.hpp  expand.hpp  generators.hpp  indexing.hpp  quadratic_equation.hpp  ray_gun.hpp  read_csv.hpp  tuple.hpp  unbound.hpp  utils_enumerate.cpp
detectors/: CMakeLists.txt  README.md  generate_metadata.sh
detectors/python/: default_metadata.py  itk_metadata.py  odd_metadata.py  telescope_metadata.py  toy_metadata.py  wire_chamber_metadata.py
detectors/python/impl/: __init__.py  definitions.py  metadata_generator.py  type_helpers.py
detectors/python/utils/: __init__.py  calorimeter_defaults.py  options.py  silicon_tracker_defaults.py  telescope_detector_defaults.py  wire_chamber_defaults.py
display/: CMakeLists.txt
display/include/style/: styles.hpp
display/include/view/: draw.hpp  generators.hpp  views.hpp
examples/: CMakeLists.txt  eigen_main.cpp
examples/src/: CMakeLists.txt
examples/src/cpu/: CMakeLists.txt  build_predefined_detectors.cpp  check_geometry_linking.cpp  define_an_actor.cpp  detector_io.cpp  detector_ray_scan.cpp  detector_reader.cpp  do_it_yourself_detector.cpp  navigation_inspection.cpp  predefined_detectors.cpp  read_detector_from_file.cpp  track_geometry_changes.cpp  write_detector_to_file.cpp
io/: CMakeLists.txt
io/csv/: CMakeLists.txt
io/include/json/: json_core.hpp  json_grids.hpp  json_masks.hpp
io/json/: CMakeLists.txt
io/payload/: CMakeLists.txt
plugins/actsvg/: CMakeLists.txt
plugins/algebra/: CMakeLists.txt
plugins/algebra/array/: CMakeLists.txt
plugins/algebra/eigen/: CMakeLists.txt
plugins/algebra/fastor/: CMakeLists.txt
plugins/algebra/smatrix/: CMakeLists.txt
plugins/algebra/vc/: CMakeLists.txt
plugins/algebra/vc_aos/: CMakeLists.txt
plugins/algebra/vc_soa/: CMakeLists.txt
plugins/array/: CMakeLists.txt
plugins/eigen/: CMakeLists.txt
plugins/smatrix/: CMakeLists.txt
plugins/svg/: CMakeLists.txt
python/: CMakeLists.txt
python/detray/: CMakeLists.txt  __init__.py
python/detray/core/: CMakeLists.txt
python/detray/detectors/: __init__.py
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/array/: CMakeLists.txt  array_find_volume.cpp  array_intersect_all.cpp  array_intersect_surfaces.cpp  array_masks.cpp
tests/benchmarks/core/: CMakeLists.txt  benchmark_grids.cpp  core_masks.cpp
tests/benchmarks/cpu/: CMakeLists.txt  benchmark_propagator.cpp  find_volume.cpp  grid.cpp  grid2.cpp  grids.cpp  intersect_all.cpp  intersect_surfaces.cpp  intersectors.cpp  linear_algebra.cpp  masks.cpp  propagation.cpp
tests/benchmarks/cuda/: CMakeLists.txt  benchmark_propagator_cuda.cpp  benchmark_propagator_cuda_kernel.cu  benchmark_propagator_cuda_kernel.hpp  propagation.cpp  propagation_new.cpp
tests/benchmarks/eigen/: CMakeLists.txt  eigen_find_volume.cpp  eigen_intersect_all.cpp  eigen_intersect_surfaces.cpp  eigen_masks.cpp
tests/benchmarks/hip/: CMakeLists.txt  propagation.cpp
tests/benchmarks/smatrix/: CMakeLists.txt  smatrix_find_volume.cpp  smatrix_intersect_all.cpp  smatrix_intersect_surfaces.cpp  smatrix_masks.cpp
tests/benchmarks/vc/: CMakeLists.txt  vc_array_find_volume.cpp  vc_array_intersect_all.cpp  vc_array_intersect_surfaces.cpp  vc_array_masks.cpp
tests/checks/: CMakeLists.txt
tests/checks/src/: CMakeLists.txt  checks_main.cpp
tests/common/: CMakeLists.txt  core_test.inl  planar_intersection_test.inl  plugin_test.inl
tests/core/: CMakeLists.txt  masks_rectangle.cpp  masks_unmasked.cpp  test_defs.hpp
tests/data/: tml-detector.csv
tests/detectors/: CMakeLists.txt
tests/detectors/src/: CMakeLists.txt  generate_telescope_detector.cpp  generate_toy_detector.cpp  generate_wire_chamber.cpp
tests/eigen/: CMakeLists.txt  eigen_core.cpp  eigen_intersect_all.cpp  eigen_planar_intersection.cpp  eigen_plugin.cpp  eigen_read_detector.cpp
tests/integration_tests/: CMakeLists.txt
tests/integration_tests/cpu/: CMakeLists.txt
tests/integration_tests/device/: CMakeLists.txt
tests/integration_tests/io/: CMakeLists.txt  (+1 more)
tests/io/: CMakeLists.txt  read_csv.hpp
tests/scripts/: analyze_benchmarks.py  run_benchmarks.sh  run_jacobian_validation.sh
tests/simulation/: CMakeLists.txt  run_simulation.cpp
tests/tools/: CMakeLists.txt
tests/tracer/: CMakeLists.txt  single_shapes.cpp  trace_rectangle.cpp
tests/unit_tests/: CMakeLists.txt
tests/validation/: CMakeLists.txt
tutorials/: CMakeLists.txt
tutorials/src/: CMakeLists.txt
utils/: CMakeLists.txt
(+2374 files in other folders)
